<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:rotation="0"
    tools:context=".Signup_Form">

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/sign_up_it_s_free"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/sangat_icon"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:contentDescription="@string/app_logo"
        android:src="@drawable/logo" />


    <EditText
        android:layout_width="349dp"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:drawableStart="@drawable/ic_baseline_person_24"
        android:hint="@string/full_name"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:textSize="14sp" />

    <EditText
        android:layout_width="349dp"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:drawableStart="@drawable/ic_baseline_email_24"
        android:hint="@string/email_address"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:textSize="14sp" />

    <EditText
        android:layout_width="349dp"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:drawableStart="@drawable/ic_baseline_lock_24"
        android:hint="@string/password"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:textSize="14sp" />

    <EditText
        android:layout_width="349dp"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:drawableStart="@drawable/ic_baseline_lock_24"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:hint="@string/confirm_password"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:textSize="14sp" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="105dp">

        <TextView
            android:id="@+id/textView"
            android:layout_width="111dp"
            android:layout_height="25dp"
            android:layout_marginStart="36dp"
            android:layout_marginTop="16dp"
            android:text="@string/date_of_birth"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="123dp"
            android:layout_height="24dp"
            android:layout_marginTop="16dp"
            android:text="@string/gender"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.296"
            app:layout_constraintStart_toEndOf="@+id/textView"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/button3"
            style="@android:style/Widget.Button"
            android:layout_width="98dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:checkable="true"
            android:clickable="true"
            android:drawableLeft="@drawable/icon_female"
            android:drawablePadding="0dp"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:fontFamily="sans-serif-light"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:text="@string/female"
            android:textSize="12sp"
            android:textStyle="normal"
            app:iconPadding="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/button2"
            app:layout_constraintTop_toBottomOf="@+id/textView2"
            app:layout_constraintVertical_bias="0.0"
            app:rippleColor="#322D2D"
            tools:ignore="RtlHardcoded" />

        <EditText
            android:id="@+id/editTextDate"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:ems="10"
            android:hint="@string/dd_mm_yyyy"
            android:importantForAutofill="no"
            android:inputType="date"
            android:singleLine="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            app:layout_constraintVertical_bias="0.011" />

        <Button
            android:id="@+id/button2"
            style="@android:style/Widget.Button"
            android:layout_width="98dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:checkable="true"
            android:clickable="true"
            android:drawableLeft="@drawable/icon_male"
            android:drawablePadding="0dp"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:fontFamily="sans-serif-light"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:text="@string/male"
            android:textSize="12sp"
            app:iconPadding="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/editTextDate"
            app:layout_constraintTop_toBottomOf="@+id/textView2"
            app:layout_constraintVertical_bias="0.006"
            tools:ignore="RtlHardcoded" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="61dp"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/checkBox2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="40dp"
            android:layout_weight="1"
            android:letterSpacing="0.050"
            android:lineSpacingExtra="2sp"
            android:text="@string/by_signing_up_your_are_accepting_our_terms_conditions"
            android:textAlignment="viewStart"
            android:textIsSelectable="false"
            android:textSize="12sp" />

    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/button4"
            android:layout_width="265dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center|clip_vertical|fill_vertical"
            android:layout_marginTop="10dp"
            android:text="@string/sign_up" />
    </FrameLayout>

</LinearLayout>