<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".LoginFormActivity"
    android:orientation="vertical">

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/login"
        android:textAlignment="center"
        android:textSize="40sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/sangat_icon"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:layout_marginTop="70dp"
        android:contentDescription="@string/app_logo"
        android:src="@drawable/logo"
        android:layout_gravity="center"
        />

    <androidx.gridlayout.widget.GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:columnCount="1">

        <EditText
            android:layout_width="349dp"
            android:layout_height="60dp"
            android:layout_marginTop="40dp"
            app:layout_gravity="center"
            android:drawableStart="@drawable/ic_baseline_email_24"
            android:hint="@string/email_address"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            android:textSize="14sp" />

        <EditText
            android:layout_width="349dp"
            android:layout_height="60dp"
            android:layout_marginTop="20dp"
            app:layout_gravity="center"
            android:drawableStart="@drawable/ic_baseline_lock_24"
            android:hint="@string/password"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:textSize="14sp" />

        <Button
            android:id="@+id/button4"
            android:layout_width="189dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/login"
            app:layout_gravity="center" />
        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:text="@string/forgotten_password"
            android:textAlignment="center"
            android:textSize="15sp"/>
    </androidx.gridlayout.widget.GridLayout>
</LinearLayout>
